--- a/client/app/caregivers/caregivers.html
+++ b/client/app/caregivers/caregivers.html
@@ -1,7 +1,7 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
-
+  <div class="table" ui-grid='caregivers' ui-grid-edit ui-grid-selection ></div>
 </div>
 
 <footer class="footer">
