--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,33 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
-
+  <form>
+    <div class="form-group">
+      <div class="controls">
+        <input ng-model="service.name" type="text" class="form-control" placeholder="Name">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="controls">
+        <input ng-model="service.description" type="text" class="form-control" placeholder="Description">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="controls">
+        <input ng-model="service.someField" type="number" class="form-control" placeholder="An Integer">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="controls">
+        <input ng-model="service.otherField" type="number" class="form-control" placeholder="Other Integer">
+      </div>
+    </div>
+    <input class='btn' ng-click="create()" type="submit" value="Create New Service">
+    <button class="btn btn-danger" ng-click="removeRandom()">Delete a Random Service</button>
+    <button class="btn btn-warning" ng-click="updateRandom()">Update a Random Service</button>
+  </form>
+  <h1>Existing Services</h1>
+  <div class="table" ui-grid='servicesOptions' ui-grid-edit ui-grid-selection ></div>
 </div>
 
 <footer class="footer">
